<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        android:padding="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:text="@string/employee_id"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:paddingBottom="6dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmpId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/back_edittext"
        android:ems="10"
        android:hint="@string/enter_employee_id"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingBottom="6dp"
        android:paddingTop="16dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/back_edittext"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:cornerRadius="6dp"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>