<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".menu.HelpSupportActivity">


    <ImageView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/description"
        android:padding="14dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingHorizontal="20dp"
        android:text="@string/help_support"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="30dp"
        android:text="Connect with us:"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/loading"
        android:textSize="22sp"
        app:drawableStartCompat="@drawable/ic_email" />


    <TextView
        android:id="@+id/whatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/loading"
        android:textSize="22sp"
        app:drawableStartCompat="@drawable/ic_whatsapp" />


    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/loading"
        android:textSize="22sp"
        app:drawableStartCompat="@drawable/ic_phone_support" />


</LinearLayout>