<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.SearchVisitorActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/description"
        android:padding="12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20sp"
        android:text="Search member"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20sp"
        android:text="Search members to know their details"
        android:textColor="@color/gray50"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="4dp"
        android:text="Search visitor"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/desc" />

    <EditText
        android:id="@+id/editMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:background="@drawable/back_edittext"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enter_mobile_number"
        android:inputType="text"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/head"
        tools:layout_editor_absoluteX="20dp" />


    <ImageView
        android:id="@+id/search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_search_next"
        app:layout_constraintBottom_toBottomOf="@id/editMobile"
        app:layout_constraintEnd_toEndOf="@id/editMobile"
        app:layout_constraintTop_toTopOf="@id/editMobile" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple70"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/didNotFind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editMobile" />

    <View
        android:id="@+id/detailsView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_edittext"
        app:layout_constraintBottom_toBottomOf="@id/detailsHead"
        app:layout_constraintTop_toBottomOf="@id/editMobile" />

    <TextView
        android:id="@+id/detailsHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:padding="10dp"
        android:text="Member ID:\nMember Name:\nMobile Number:\nDOB:\nAnniversary Date:\nCity:\nInterested:"
        android:textColor="@color/gray70"
        app:layout_constraintStart_toStartOf="@id/detailsView"
        app:layout_constraintTop_toTopOf="@id/detailsView" />

    <TextView
        android:id="@+id/details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:lineSpacingMultiplier="1.5"
        android:padding="10dp"
        android:textColor="@color/gray70"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/detailsView"
        app:layout_constraintStart_toEndOf="@+id/detailsHead"
        app:layout_constraintTop_toTopOf="@id/detailsView" />


    <Button
        android:id="@+id/markVisiting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="10dp"
        android:text="Mark as Visiting"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/detailsView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/detailsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="detailsView,detailsHead,details,markVisiting"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/didNotFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="20sp"
        android:text="@string/didn_t_find_the_visitor_data"
        android:textColor="@color/gray50"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/addVisitor" />

    <TextView
        android:id="@+id/addVisitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/add_new_visitor"
        android:textColor="@color/purple70"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableEndCompat="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>